feat: add short story

--- a/index.html
+++ b/index.html
@@ -1,8 +1,56 @@
+<!doctype html>
 <html>
-    <head>
-        <title>Something Good - edy-tanto.github.io</title>
-    </head>
-    <body>
-        <h1>Something good is coming</h1>
-    </body>
+  <head>
+    <title>Something Good - edy-tanto.github.io</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body>
+    <article class="max-w-[560px] text-xl space-y-8 text-justify mx-auto py-10 px-4">
+      <p>Hi! This is Edy!</p>
+      <p>This is my short story... :D</p>
+      <p>
+        I've been immersed in coding since my last year in junior high at SMP
+        Katolik Santu Petrus Kota Pontianak, particularly for competitive
+        programming competitions. During this time, I primarily worked on
+        logical exercises and programming tasks related to data structures. I
+        used Pascal, with Free Pascal IDE, to write solutions for these tasks.
+        My involvement in competitive programming continued throughout my senior
+        years, culminating in my highest achievement as a national finalist in
+        Medan in 2010.
+      </p>
+
+      <p>
+        Following my high school graduation, I worked as a math teacher,
+        tutoring senior high students for a couple of years. During my
+        university years, around semester 4 or 5, I joined the university's IT
+        department (UPT Pusat Komputer Universitas Tanjungpura) as a staff
+        member. In this role, I was tasked with developing applications such as
+        E-Office (mostly PHP, jQuery-based web application) for university
+        administration. Although the application was successfully deployed, I
+        wasn't entirely certain about its implementation. Another significant
+        project I undertook during this time was creating a geographic
+        information system to store bridge information for a city in Kalimantan
+        Barat using Delphi.
+      </p>
+
+      <p>
+        My career accelerated rapidly from there. In addition to my role as a
+        developer, I volunteered in various developer community activities,
+        including Female Dev Chapter Pontianak, Google Day (Widya Dharma), and
+        IAK (Indonesia Android Kejar) Chapter Pontianak. It was during this
+        period that I crossed paths with the founder of Turbin, the company I
+        currently work for.
+      </p>
+
+      <p>
+        Throughout this journey, I've learned many valuable lessons. One of the
+        most significant realizations for me was that technology isn't just
+        about dealing with machines; it's primarily about humans. As developers,
+        we have the important task of serving as translators, creating tools to
+        empower and assist people.
+      </p>
+    </article>
+  </body>
 </html>
